@@ -897,7 +897,8 @@ int            domIsPINAME (const char *name);
 int            domIsQNAME (const char *name);
 int            domIsNCNAME (const char *name);
 int            domIsChar (const char *str);
-char *         domClearString (char *str, int *haveToFree);
+char *         domClearString (char *str, int *haveToFree, int replace,
+                               int length);
 int            domIsBMPChar (const char *str);
 int            domIsComment (const char *str);
 int            domIsCDATA (const char *str);
